--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.22.0",
     "bootstrap-vue-3": "^0.1.13",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.1",
     "lodash": "^4.17.21",
     "roboto-fontface": "*",
